syntax = "proto3";

option go_package = "storage";
option cc_enable_arenas = true;
option java_package = "io.stackrox.proto.storage";

package storage;

message PolicyCategory {
    string id       = 1;  // @gotags: sql:"pk"
    string name     = 2;  // @gotags: search:"Policy Category,store" sql:"unique"
    bool isDefault  = 3 ;
}
